--- a/.env.production
+++ b/.env.production
@@ -1,12 +1,12 @@
 # ===== Firebase Configuration =====
 # Get these from Firebase Console: Project Settings → Web App
 # https://console.firebase.google.com/project/sims-41ff9/settings/general
-VITE_FIREBASE_API_KEY=YOUR_FIREBASE_API_KEY
+VITE_FIREBASE_API_KEY=AIzaSyBrO6eP7X5JQml6eSx9GXgG9xIbyuZ3G2s
 VITE_FIREBASE_AUTH_DOMAIN=sims-41ff9.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=sims-41ff9
-VITE_FIREBASE_STORAGE_BUCKET=sims-41ff9.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=YOUR_FIREBASE_MESSAGING_SENDER_ID
-VITE_FIREBASE_APP_ID=YOUR_FIREBASE_APP_ID
+VITE_FIREBASE_STORAGE_BUCKET=sims-41ff9.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=1012031798746
+VITE_FIREBASE_APP_ID=1:1012031798746:web:88df9eb51f2ce666d194e3
 VITE_FIREBASE_DATABASE_URL=https://sims-41ff9-default-rtdb.firebaseio.com
 
 # ===== Mock API (for local development without backend) =====
